--- a/examples/toolkit/pyaedt_toolkit/ui/windows/create_geometry/geometry_page.ui
+++ b/examples/toolkit/pyaedt_toolkit/ui/windows/create_geometry/geometry_page.ui
@@ -1181,6 +1181,12 @@
      <property name="text">
       <string>Create geometry</string>
      </property>
+     <property name="default">
+      <bool>true</bool>
+     </property>
+     <property name="flat">
+      <bool>false</bool>
+     </property>
     </widget>
    </item>
   </layout>
