--- a/src/ansys/aedt/toolkits/common/ui/utils/ui_templates/pages/main_pages.ui
+++ b/src/ansys/aedt/toolkits/common/ui/utils/ui_templates/pages/main_pages.ui
@@ -116,14 +116,14 @@
          <item alignment="Qt::AlignHCenter|Qt::AlignTop">
           <widget class="QLabel" name="label">
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
+            <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
            <property name="minimumSize">
             <size>
-             <width>1000</width>
+             <width>500</width>
              <height>0</height>
             </size>
            </property>
